--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1484,3 +1484,35 @@ section {
     text-align: center;
   }
 }
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:30px;
+	left:30px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+.tooltiptext{
+  visibility: hidden;
+  width: 100px;
+  position: absolute;
+  background-color: #25d366;
+  color:white;
+  text-align: center;
+  bottom: 60px;
+  font-size: large;
+
+}
+.float:hover .tooltiptext{
+  visibility: visible;
+}
+
+.my-float{
+	margin-top:16px;
+}
